cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(StitchingApplication)
if(WIN32)
  set(OpenCV_DIR "C:/opencv/build")
endif()
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/include)

# Calibration-driven, feature-free pipeline (builds on OpenCV 4.x AND 5.x)
add_executable(StitchPipeline stitch_pipeline.cpp)
target_link_libraries(StitchPipeline ${OpenCV_LIBS})

# Original feature-homography app (OpenCV 4.x; Windows/desktop reference build)
if(WIN32)
  add_executable(StitchingApplication main.cpp)
  target_link_libraries(StitchingApplication ${OpenCV_LIBS})
endif()